--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,14 @@
 
 :root {
     --header-height: 70px;
-    --h1-font: 'Raleway', sans-serif;
-    --p-font: 'Open Sans', sans-serif;
+    --raleway-font: 'Raleway', sans-serif;
+    --opensans-font: 'Open Sans', sans-serif;
+    --blue-color: #08A6E4;
+    --red-color: #FB3B64;
+    --green-color: #55DFB4;
+    --white-color: #FFFFFF;
+    --grey-color: #A5A5A5;
+    --black-color: #00000029;
 }
 
 .container {
@@ -17,10 +23,12 @@
     margin: 0 auto;
 }
 
+/** Header */
+
 header {
     width: 100%;
     height: 100vh;
-  }
+}
 
 .main-header {
     width: 100%;
@@ -28,16 +36,16 @@ header {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background: #FFFFFF;
-    box-shadow: 0px 3px 6px #00000029;
+    background: var(--color-white);
+    box-shadow: 0px 3px 6px var(--black-color);
 }
 
 .logo {
     width: 142px;
     height: 37;
     font-size: 32px;
-    color: #08A6E4;
-    font-family: 'Raleway', sans-serif;
+    color: var(--blue-color);
+    font-family:var(--raleway-font)
 }
 
 nav ul{
@@ -45,7 +53,7 @@ nav ul{
     display: flex;
     height: 100%;
     align-items: center;
-    font-family: 'Open Sans', sans-serif;
+    font-family: var(--opensans-font);
 }
 
 nav li {
@@ -55,31 +63,27 @@ nav li {
 nav a {
     text-decoration: none;
     text-transform: uppercase;
-    color: #A5A5A5;
+    color: var(--color-grey);
     font-size: 15px;
 }
 
 nav a:hover {
-    color: #000000;
-    text-decoration: underline #08A6E4;
+    color: var(--color-black);
+    text-decoration: underline var(--blue-color);
     font-weight: 900;
 }
 
 .main-header-picture{
     width: 100%;
     height: calc(100vh - var(--header-height));
-
     display: flex;
     justify-content: center;
     flex-direction: column;
-   
 }
 
 .jumbo {
     width: 100%;
     height: 100%;
-    
-
     background: url("../assets/Background.png");
     background-size: cover;
     background-position: bottom;
@@ -91,7 +95,7 @@ nav a:hover {
 
 .page-title h1 {
     margin-top: 30px;
-    font-family:var(--h1-font);
+    font-family:var(--raleway-font);
     font-weight: 400;
     font-size: 49px;
 }
@@ -99,7 +103,7 @@ nav a:hover {
 .page-title p {
     margin-top: 20px;
     font-size: 16px;
-    font-family:var(--p-font);
+    font-family:var(--opensans-font);
     font-weight: 400;
 }
 
@@ -107,17 +111,17 @@ nav a:hover {
     width: 400px;
     height: 40px;
     margin-top: 20px;
-
     border-radius: 40px;
-    background-color: #08A6E4;
+    background-color: var(--blue-color);
     border: none;
-
-    color:#FFFFFF;
+    color:var(--white-color);
     text-align: center;
     font-size: 16px;
-    font-family:var(--p-font);
+    font-family:var(--opensans-font);
     font-weight: 600;
 }
+
+/** Section 1 */
 
 .section-1 {
     display: flex;
@@ -128,30 +132,25 @@ nav a:hover {
 
 .section-1 h2 {
     margin-top: 50px;
-    font-family: var(--p-font);
+    font-family: var(--raleway-font);
     font-weight: 400;
-    font-size: 36px;
 }
 
 .section-1-box h3 {
-    font-family: var(--p-font);
+    font-family: var(--opensans-font);
     font-weight: 900;
-    font-size: 20px;
     letter-spacing: 6px;
     margin-top: 10px;
     margin-bottom: 10px;
 }
 
 .section-1-box p {
-    font-family: var(--p-font);
+    font-family: var(--opensans-font);
     font-weight: 400;
-    font-size: 16px;
-    color: #A5A5A5;
+    color: var(--grey-color);
     margin-top: 10px;
     margin-bottom: 10px;
- 
     text-align: center;
-    
 }
 
 .section-1-boxes {
@@ -183,22 +182,24 @@ nav a:hover {
     border-radius: 50%;
 }
 
-img {
+.circle img {
     margin-top: 10px;
     margin-left: 30px;
 }
 
 .circle-1 {
-    background-color:#FB3B64;
+    background-color: var(--red-color);
 }
 
 .circle-2 {
-    background-color:#08A6E4;
+    background-color:var(--blue-color);
 }
 
 .circle-3 {
-    background-color:#55DFB4;
+    background-color:var(--green-color);
 }
+
+/** Section 2 */
 
 .section-2 {
     display: flex;
@@ -206,16 +207,27 @@ img {
     align-items: center;
     flex-direction: column;
     background-color: #F7F7F7;
-    background-color: yellow;
     padding: 50px;
+}
+
+.section-2 h2 {
+    font-family: var(--raleway-font);
+    font-weight: 400;
+    margin-bottom: 50px;
+}
+
+.section-2 p {
+    font-family: var(--opensans-font);
+    font-weight: 400;
+    margin-bottom: 50px;
+    
 }
 .section-2-box1 {
     height: 370px;
-    width: 1124px;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #FFFFFF;
+    background-color: var(--white-color);
     margin: 10px;
 }
 
@@ -223,15 +235,14 @@ img {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-
-    width: 416px;
+    padding: 30px;
+    width: 50%;
 }
 
 .section-2-photo1 {
-    width: 433px;
+    width: 50%;
     height: 294px;
     z-index: 0;
-    
 }
 
 .section-2-photo1 img {
@@ -244,24 +255,28 @@ img {
 }
 
 .section-2-photo1-square{
-    width: 150px;
-    height: 150px;
+    width: 180px;
+    height: 180px;
     background-color: #FB3B64;
     transform: rotate(-45deg);
     border-radius: 20px;
     z-index: 0;
     float: right;
     margin-top: 30px;
-    margin-right: 30px;
+    margin-right: 130px;
+}
+
+.section-2-text1-line {
+    width: 350px;
+    border-bottom: 4px solid var(--red-color);
 }
 
 .section-2-box2 {
     height: 370px;
-    width: 1124px;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #FFFFFF;
+    background-color: var(--white-color);
     margin: 10px;
 }
 
@@ -269,40 +284,49 @@ img {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    width: 50%;
+    padding: 30px;
+}
 
-    width: 416px;
+.section-2-text2-line {
+    width: 350px;
+    border-bottom: 4px solid var(--blue-color);
 }
 
 .section-2-photo2 {
-    width: 433px;
+    width:50%;
     height: 294px;
-    z-index: 0;
-    
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .section-2-photo2 img{
-    width: 426px;
-    height: 328px;
+    width: 380px;
+    height: 280px;
     display: flex;
     position: absolute;
 }
 
 .section-2-photo2-circle{
-    width: 350px;
-    height: 350px;
-    background-color: #07ACE6;
+    width: 280px;
+    height: 280px;
+    background-color: var(--blue-color);
     border-radius: 50%;
-    z-index: 0;
+    margin-left: 20px;
+}
+
+.section-2-boxes {
+    display: flex;
+    justify-content: space-around;
 }
 
 .section-2-box3 {
     height: 370px;
-    width: 1124px;
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-direction: row;
-    background-color: #FFFFFF;
+    background-color: var(--white-color);
     margin: 10px;
 }
 
@@ -310,16 +334,324 @@ img {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    padding: 30px;
+}
 
-    width: 416px;
+.section-2-text3-line {
+    width: 350px;
+    border-bottom: 4px solid var(--green-color);
 }
 
 .section-2-photo3 {
     width: 433px;
-    height: 294px;
+    height: 370px;
     display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--green-color);
+}
+
+.section-2-photo3 img {
+    width: 350px;
+    height: 350px;
+    margin-top:80px;
+}
+
+/** Section 3 */
+
+.section-3 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 30px;
+}
+
+.section-3 h2 {
+    font-family: var(--raleway-font);
+    font-weight: 400;
+}
+
+.section-3-boxes {
+    width: 70%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin-top: 30px;
+}
+
+.section-3-box1 {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: column;
+    border: 1px solid var(--red-color);
+    border-radius: 18px;
+    height: 300px;
+    width: 250px;
+}
+
+.section-3-box2 {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: column;
+    border: 1px solid var(--blue-color);
+    border-radius: 18px;
+    height: 350px;
+    width: 300px;
+}
+
+.section-3-box3 {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: column;
+    border: 1px solid var(--green-color);
+    border-radius: 18px;
+    height: 300px;
+    width: 250px;
+}
+
+.items ul{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.item-1 {
+    font-family: var(--opensans-font);
+    font-weight: 900;
+    text-align: center;
+}
+
+.item-2-1 {
+    font-family: var(--opensans-font);
+    font-weight: 100;
+    text-align: center;
+    color: var(--red-color);
+    font-size: 30px;
+}
+
+.item-2-2 {
+    font-family: var(--opensans-font);
+    font-weight: 100;
+    text-align: center;
+    color: var(--blue-color);
+    font-size:30px;
+}
+
+.item-2-3 {
+    font-family: var(--opensans-font);
+    font-weight: 100;
+    text-align: center;
+    color: var(--green-color);
+    font-size:30px;
+}
+
+.item-3 {
+    font-family: var(--opensans-font);
+    font-weight: 900;
+    text-align: center;
+    font-size: 12px;
+}
+
+li {
+    list-style: none;
+}
+
+.item-yes {
+    font-family: var(--opensans-font);
+    font-size: 14px;
+    margin: 10px;
+}
+
+.item-not {
+    font-family: var(--opensans-font);
+    font-size: 14px;
+    margin: 10px;
+}
+
+.item-yes::before {
+    content: "";
+    width: 11px;
+    height: 11px;
+    display: inline-block;
+    margin-right: 10px;
+    background-image: url(../assets/Checkmark.svg);
+    color: var(--green-color);
+    border: 1px solid var(--green-color);
+    border-radius: 2px;
+}
+      
+.item-not::before {
+    content: "";
+    width: 11px;
+    height: 11px;
+    display: inline-block;
+    margin-right: 10px;
+    background-image: url(../assets/Close.svg);
+}
+
+.btn {
+    text-decoration: none;
+    width: 150px;
+    height: 50px;
+    color:var(--white-color);
+    font-family: var(--opensans-font);
+    font-weight: 900;
+    font-size: 13px;
+    text-align: center;
+    border-radius: 23px;
+}
+
+.btn-1 {
+    background-color: var(--red-color);
+    position: relative;
+    margin-bottom: -35px;
+}
+
+.btn-2 {
+    background-color: var(--blue-color);
+    position: relative;
+    margin-bottom: -40px;
+}
+
+.btn-3 {
+    background-color: var(--green-color);
+    position: relative;
+    margin-bottom: -30px;
+}
+
+/** Section 4 */
+
+.section-4 {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    margin-top: 50px;
+    padding:30px;
+} 
+
+.section-4-text {
+    width: 30%;
+}
+
+.section-4-text h1 {
+    font-size:40px;
+    font-weight: 400;
+    font-family: var(--opensans-font);
+    margin-bottom: 10px;
+}
+
+.section-4-text p {
+    font-size:16px;
+    font-weight: 400;
+    font-family: var(--raleway-font);
+    margin-bottom: 10px;
+}
+
+.section-4-text-contact a {
+    text-decoration: none;
+    font-size:16px;
+    font-family: var(--raleway-font);
+    color: var(--grey-color);
+    text-align: center;
 }
 
 
+form {
+    width: 30%;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: column;
+}
 
+.form-label {
+    font-size: 11px;
+    font-family: var(--raleway-font);
+    color:var(--blue-color);
+    font-weight: 700;
+    text-transform: uppercase;
+    margin: 10px 0px 10px 0px;
+}
+
+#name {
+    width: 100%;
+    border:none;
+    border-bottom: 1px solid #95989A;
+}
+
+#email {
+    width: 100%;
+    border:none;
+    border-bottom: 1px solid #95989A;
+}
+
+.check-box {
+    display: flex;
+    margin: 10px 0px 10px 0px;
+}
+
+#chk {
+    border: 1px solid #95989A;
+    border-radius: 4px;
+    margin-right: 5px;
+}
+
+.checkbox-label {
+    color: #707070;
+    font-family: var(--raleway-font);
+    font-size: 12px;
+}
+
+.form-btn {
+    width: 150px;
+    height: 40px;
+    background-color: var(--blue-color);
+    color: var(--white-color);
+    font-size: 13px;
+    font-family: var(--raleway-font);
+    font-weight: 700;
+    border-radius: 35px;
+    border:none;
+    margin-left: calc(406px - 150px)
+}
+
+/** Footer */
+
+.footer {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: var(--white-color);
+    box-shadow: 0px 3px 6px var(--black-color);
+    padding: 20px 0;
+}
+
+.footer-logo {
+    font-size: 26px;
+    margin-left: 20px;
+}
+
+.footer-text {
+    font-size: 11px;
+    color: var(--color-grey);
+    font-family: var(--opensans-font);
+    font-weight: 400;
+    margin-left: 20px;
+}
+
+.footer-right {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.footer-right img {
+    margin-left: 10px;
+    margin-right: 20px;
+}
 
